Added Synchronization (Mutex, OwnerLock, ConditionVariable and Semaphore) Changed Makefile to compile all spikes in spike folder. I will have spikes for different tests.

--- a/.cproject
+++ b/.cproject
@@ -26,6 +26,9 @@
 							</builder>
 							<tool id="cdt.managedbuild.tool.gnu.archiver.base.278284765" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.base.232426244" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.base">
+								<option id="gnu.cpp.compiler.option.preprocessor.def.1499484764" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="__cplusplus=201403"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1823182261" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.base.128053541" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.base">
