uses c++14 and updates compiler flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 project(uThreads VERSION 0.3.0 LANGUAGES CXX)
 
-set (CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 # External 3rd party libs that we include
 #add_subdirectory(libs/libcuckoo EXCLUDE_FROM_ALL)
